server.log

> harmonia-catolica-api@1.0.0 dev
> ts-node src/server.ts

/Users/robsonrocha/Portal Católico/harmonia-catolica-api/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/server.ts(12,25): error TS7006: Parameter 'req' implicitly has an 'any' type.
src/server.ts(12,30): error TS7006: Parameter 'res' implicitly has an 'any' type.
src/server.ts(22,10): error TS7006: Parameter 'req' implicitly has an 'any' type.
src/server.ts(22,15): error TS7006: Parameter 'res' implicitly has an 'any' type.

    at createTSError (/Users/robsonrocha/Portal Católico/harmonia-catolica-api/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/robsonrocha/Portal Católico/harmonia-catolica-api/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/robsonrocha/Portal Católico/harmonia-catolica-api/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/robsonrocha/Portal Católico/harmonia-catolica-api/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/robsonrocha/Portal Católico/harmonia-catolica-api/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/robsonrocha/Portal Católico/harmonia-catolica-api/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1019:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12) {
  diagnosticCodes: [ 7006, 7006, 7006, 7006 ]
}
